[gd_scene load_steps=2 format=3 uid="uid://dcn4tuxqo0gbr"]

[ext_resource type="Script" path="res://scenes/test_preparation/choice_panel.gd" id="1_wvnko"]

[node name="ChoicePanel" type="PanelContainer"]
size_flags_horizontal = 3
script = ExtResource("1_wvnko")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="WeekLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Week 1"
horizontal_alignment = 1

[node name="StudyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Study"

[node name="SeparatorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "- or -"
horizontal_alignment = 1

[node name="RestButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
text = "Rest"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StudyButton" to="." method="_on_study_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestButton" to="." method="_on_rest_button_pressed"]
